[package]
name = "txns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
itertools = "0.14.0"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
rust_decimal_macros = "1.37.1"
